fix checkIn
